<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kiran.mycash.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/etTotalBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="63dp"
            android:inputType="textPersonName"
            android:text="@string/totBalanceAmt"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalBalance"
            android:layout_width="281dp"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="19dp"
            android:clickable="true"
            android:text="Total Balance"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <CheckBox
        android:id="@+id/chkIncome"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="147dp"
        android:text="@string/chkincome" />

    <CheckBox
        android:id="@+id/ChkExpense"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chkIncome"
        android:layout_below="@+id/etDate"
        android:checked="true"
        android:text="@string/chkexpense" />

    <ImageView
        android:id="@+id/ivDatePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chkIncome"
        android:layout_toStartOf="@+id/etDate"
        android:contentDescription="AddDate"
        app:srcCompat="@drawable/ic_action_name" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chkIncome"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:inputType="date"
        android:text="Select Date"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etTransationAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChkExpense"
        android:layout_marginStart="34dp"
        android:inputType="numberSigned"
        android:selectAllOnFocus="true"
        android:text="@string/enterTransactionamount"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTransationAmount"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickbtnAddTransaction"
        android:text="@string/btnAddtransaction"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="italic" />



</RelativeLayout>
</ScrollView>